--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -5,7 +5,7 @@ Cancer screening is a widely used practice to detect cancer before symptoms appe
 
 The switch from AS to active treatment in many types of cancers (e.g., prostate cancer) is not done without consulting the biopsy results \citep{bokhorst2016decade}. Although biopsies can be reliable, but they are also painful, cause anxiety, and have an associated risk of complications such as inflammation, hematuria and sepsis \citep{loeb2013systematic,mueller1988severe}. Because of this reason the schedule of biopsies has significant medical consequences for patients. A frequent schedule of biopsies may help detecting cancer earlier but the corresponding risk of complications will be high. And although such a schedule may work well for faster progressing cancer patients, but for slowly progressing cancer patients many unnecessary biopsies will be scheduled. Furthermore, patients do not always comply with such a schedule, as has been observed by \citet{bokhorst2015compliance}. In the specific case of the world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS), the compliance rate for biopsies steadily decreased from 81\% at year one of follow up, to 60\% at year four, 53\% at year seven and 33\% at year ten \citep{bokhorst2016decade}. Such non-compliance can lead to delayed detection of cancer progression, which reduces the effectiveness of AS programs.
 
-This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of cancer progression. In particular, we are motivated by the case of prostate cancer (PCa) patients, for whom several AS programs schedule biopsies with a gap of only one year (we refer to it as annual schedule hereafter) \citep{tosoian2011active,welty2015extended}. Most AS programs for PCa strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow up, year four, year seven, and year ten, and every five years thereafter. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured diagnostic information. In context of PCa, this information is serum prostate-specific antigen (PSA) levels (measured in ng/mL) and repeat biopsy results. A biopsy is graded using the Gleason score, which takes a value between 2 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6 or less. When a patient's Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), the patient switches from AS to active treatment.
+This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of cancer progression. In particular, we are motivated by the case of prostate cancer (PCa) patients, for whom several AS programs schedule biopsies with a gap of only one year (we refer to it as annual schedule hereafter) \citep{tosoian2011active,welty2015extended}. Most AS programs for PCa strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow up, year four, year seven, and year ten, and every five years thereafter. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured diagnostic information. In context of PCa, this information is serum prostate-specific antigen (PSA) levels (measured in ng/mL) and repeat biopsy results. A biopsy is graded using the Gleason score, which takes a value between 2 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6 or less. When a patient's Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), the patient switches from AS to active treatment. Hence, for AS programs it is of prime interest to detect GR soonest with least number of biopsies possible.
 
 Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
 
