--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
@@ -26,7 +26,7 @@ From the joint model fitted to the PRIAS dataset we found that only $\log_2 \mbo
 
 \subsection{Demonstration for Patient 3174}
 \label{subsec : demo_prias_pers_schedule}
-Using the demonstration dataset, we next present the functioning of personalized schedules based on expected time of GR and dynamic risk of GR. The first patient of interest is patient 3174. The evolution of PSA, repeat biopsy history and proposed times of biopsies for this patient are shown in the top panel of Figure \ref{fig : prias_demo_pid_3174}. It can be seen that the schedule of biopsy based on expected time of GR adjusts the times of biopsy according to the rise in hazard, which increases due steep rise in $\log_2 \mbox{PSA}$ velocity. More specifically, at year two the proposed biopsy time is 12.5 years whereas at year four it decreases to 5.3 years. On average, a biopsy scheduled using expected time of GR at year two should have a larger offset $O^S_j$ compared to the same at year four. This is because the standard deviation of $g(T^*_j)$, given by $\mbox{SD}_g(T^*_j) = \sqrt{\mbox{var}_g(T^*_j)}$, is considerably lower at year four as shown in the bottom panel of Figure \ref{fig : prias_demo_pid_3174}. In the figure it can be seen that the standard deviation also strongly depends on $\log_2 \mbox{PSA}$ velocity. As for the schedules based on dynamic risk of GR, the threshold $\kappa$ was automatically chosen using $\mbox{F}_1$ score, and was estimated to be between 1 and 0.9 at all time points. This value of $\kappa$ corresponds to a time very close to the time of latest biopsy ($t=0$). Hence the biopsies are scheduled much earlier than those based on expected time of GR.
+Using the demonstration dataset, we next present the functioning of personalized schedules based on expected time of GR and dynamic risk of GR. The first patient of interest is patient 3174. The evolution of PSA, repeat biopsy history and proposed times of biopsies for this patient are shown in the top panel of Figure \ref{fig : prias_demo_pid_3174}. It can be seen that the schedule of biopsy based on expected time of GR adjusts the times of biopsy according to the rise in hazard, which increases due to steep rise in $\log_2 \mbox{PSA}$ velocity. More specifically, at year two the proposed biopsy time is 12.5 years whereas at year four it decreases to 5.3 years. On average, a biopsy scheduled using expected time of GR at year two should have a larger offset $O^S_j$ compared to the same at year four. This is because the standard deviation of $g(T^*_j)$, given by $\mbox{SD}_g(T^*_j) = \sqrt{\mbox{var}_g(T^*_j)}$, is considerably lower at year four as shown in the bottom panel of Figure \ref{fig : prias_demo_pid_3174}. In the figure it can be seen that the standard deviation also strongly depends on $\log_2 \mbox{PSA}$ velocity. As for the schedules based on dynamic risk of GR, the threshold $\kappa$ was automatically chosen using $\mbox{F}_1$ score, and was estimated to be between 1 and 0.9 at all time points. This value of $\kappa$ corresponds to a time very close to the time of latest biopsy ($t=0$). Hence the biopsies are scheduled much earlier than those based on expected time of GR.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/prias_demo/case_3174.png}}
