--- a/report/pers_schedule/biometrics_submission/supplementary/sim_study_graphs.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/sim_study_graphs.tex
@@ -22,7 +22,7 @@ We have also presented results for a fixed $\kappa$ of 0.95, which means that th
 \Hline
 \multicolumn{5}{c}{a) All subgroups: 124781 patients}\\
 \hline
-Schedule          & $E[N^{bS}]$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule          & $E[N^S]$ & $E(O^S_j)$ & ${\mbox{SD}[N^S]}$ & ${\mbox{SD}[O^S]}$ \\
 \hline
 Annual         & 5.24            & 6.01                & 2.53          & 3.46              \\
 PRIAS          & 4.90            & 7.71                & 2.36          & 6.31\\
@@ -36,7 +36,7 @@ Dyn. risk GR ($\kappa=0.95$) & 5.15 & 6.02 & 2.51 & 3.47\\
 \hline
 \multicolumn{5}{c}{b) Subgroup $G_1$: 41484 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E[N^S]$ & $E(O^S_j)$ & ${\mbox{SD}[N^S]}$ & ${\mbox{SD}[O^S]}$ \\
 \hline
 Annual         & 4.32            & 6.02                & 3.13          & 3.44              \\
 PRIAS          & 4.07            & 7.44                & 2.88          & 6.11    \\
@@ -50,7 +50,7 @@ Dyn. risk GR ($\kappa=0.95$) & 4.23 & 6.05 & 3.10 & 3.46\\
 \hline      
 \multicolumn{5}{c}{c) Subgroup $G_2$: 41423 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E[N^S]$ & $E(O^S_j)$ & ${\mbox{SD}[N^S]}$ & ${\mbox{SD}[O^S]}$ \\
 \hline
 Annual         & 5.18            & 5.98                & 2.13          & 3.47              \\
 PRIAS          & 4.85            & 7.70                & 2.00          & 6.29        \\
@@ -64,7 +64,7 @@ Dyn. risk GR ($\kappa=0.95$) & 5.09 & 5.99 & 2.11 & 3.47\\
 \hline      
 \multicolumn{5}{c}{d) Subgroup $G_3$: 41874 patients}\\
 \hline
-Schedule        & $E[N^{bS}]$ & $E(O^S_j)$ & ${\mbox{SD}[N^{bS}]}$ & ${\mbox{SD}[O^S]}$ \\
+Schedule        & $E[N^S]$ & $E(O^S_j)$ & ${\mbox{SD}[N^S]}$ & ${\mbox{SD}[O^S]}$ \\
 \hline
 Annual         & 6.20             & 6.02                & 1.76          & 3.46              \\
 PRIAS          & 5.76             & 7.98                & 1.71         & 6.51        \\
