--- a/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
@@ -5,17 +5,17 @@
 Given a particular schedule $S$ of biopsies, our next goal is to evaluate the schedule and to compare it with other schedules. To this end, we first present the methods to evaluate the biopsy schedules and then discuss the choice of a schedule.
 
 \subsection{Evaluation of Schedules}
-We evaluate a schedule $S$ using two criteria, namely the number of biopsies $N^{bS}_j \epsilon [1, \infty]$ a schedule conducts for the $j$-th patient to detect GR, and the offset $O^S_j \epsilon [0, \infty]$ by which it overshoots the true GR time $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^{bS}_j}} - T^*_j$, where $T^S_{j{N^{bS}_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^{bS}_j, O^S_j)$ of the number of biopsies and the offset. Given the medical burden of biopsies, ideally only one biopsy which leads to a zero offset should be conducted. That is, a schedule with a low mean number of biopsies $E(N^{bS}_j)$ as well a low mean offset $E(O^S_j)$ is desired. It is also desired that a schedule has low variance of the number of biopsies $\mbox{var}(N^{bS}_j)$, as well as low variance of the offset $\mbox{var}(O^S_j)$, so that the schedule works similarly for most patients. Quantiles of $p(N^{bS}_j)$ may also be of interest. For example, a schedule which conducts less than two biopsies to detect GR in 95\% of the patients may be preferred.
+We evaluate a schedule $S$ using two criteria, namely the number of biopsies $N^S_j \epsilon [1, \infty]$ a schedule conducts for the $j$-th patient to detect GR, and the offset $O^S_j \epsilon [0, \infty]$ by which it overshoots the true GR time $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^S_j}} - T^*_j$, where $T^S_{j{N^S_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^S_j, O^S_j)$ of the number of biopsies and the offset. Given the medical burden of biopsies, ideally only one biopsy which leads to a zero offset should be conducted. That is, a schedule with a low mean number of biopsies $E(N^S_j)$ as well a low mean offset $E(O^S_j)$ is desired. It is also desired that a schedule has low variance of the number of biopsies $\mbox{var}(N^S_j)$, as well as low variance of the offset $\mbox{var}(O^S_j)$, so that the schedule works similarly for most patients. Quantiles of $p(N^S_j)$ may also be of interest. For example, a schedule which conducts less than two biopsies to detect GR in 95\% of the patients may be preferred.
 
 \subsection{Finding a Suitable Schedule}
 Given the multiple criteria for evaluation of a schedule, the next step is to select a schedule. Using principles from compound optimal designs \citep{lauter1976optimal} we propose to choose a schedule $S$ which minimizes a loss function of the following form:
 \begin{equation}
 \label{eq : loss_func_sim_study_generic}
-L(S) = \sum_{r=1}^R \eta_r \mathcal{R}_r(N^{bS}_j).
+L(S) = \sum_{r=1}^R \eta_r \mathcal{R}_r(N^S_j).
 \end{equation}
-where $\mathcal{R}_r(\cdot)$ is an evaluation criteria based on either the number of biopsies or the offset (for brevity of notation, only $N^{bS}_j$ is used in the equation above). Some examples of $\mathcal{R}_r(\cdot)$ are mean, median, variance and quantile function. Constants $\eta_1, \ldots, \eta_R$, where $\eta_r \epsilon [0,1]$ and $\sum_{r=1}^R \eta_r = 1$, are weights to differentially weigh-in the contribution of each of the $R$ criteria. An example loss function is:
+where $\mathcal{R}_r(\cdot)$ is an evaluation criteria based on either the number of biopsies or the offset (for brevity of notation, only $N^S_j$ is used in the equation above). Some examples of $\mathcal{R}_r(\cdot)$ are mean, median, variance and quantile function. Constants $\eta_1, \ldots, \eta_R$, where $\eta_r \epsilon [0,1]$ and $\sum_{r=1}^R \eta_r = 1$, are weights to differentially weigh-in the contribution of each of the $R$ criteria. An example loss function is:
 \begin{equation}
 \label{eq : loss_func_sim_study}
-L(S) = \eta_1 E(N^{bS}_j) + \eta_2 E(O^S_j). 
+L(S) = \eta_1 E(N^S_j) + \eta_2 E(O^S_j). 
 \end{equation}
 The choice of $\eta_1$ and $\eta_2$ is not easy, because biopsies have associated medical risks and consequently the cost of an extra biopsy cannot be quantified or compared to a unit increase in offset easily. To obviate this problem we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\eta_1$ and $\eta_2$ there exists a constant $C>0$ for which minimization of loss function in (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the loss function subject to the constraint that $E(O^S_j) < C$. That is, a suitable schedule is the one which conducts the least number of biopsies to detect GR while simultaneously guaranteeing an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. In the more generic case in (\ref{eq : loss_func_sim_study_generic}), a schedule can be chosen by minimizing $\mathcal{R}_R(\cdot)$ under the constraint $\mathcal{R}_r(\cdot) < C_r; r=1, \ldots, R-1$.
